Fix: Get rid of annoying deprecation underlines Fix: removeIf to compensate for new GameFunction DTO